swagger prontos
